# sm_vpn_stack_suite

./: CHANGELOG  README  README.md
socket_client/: settings.gradle
socket_client/app/: build.gradle
socket_client/gradle/wrapper/: gradle-wrapper.properties
socket_client_vs/: socket_client_vs.sln
socket_client_vs/sm_log_lib/: framework.h  sm_log_lib.vcxproj  sm_log_lib.vcxproj.filters  sm_log_types.h
socket_client_vs/socket_client_vs/: socket_client_vs.cpp  socket_client_vs.h  socket_client_vs.vcxproj  socket_client_vs.vcxproj.filters
socket_client_vs/sstring_lib/: safe_gets.h  safe_mem_constraint.h  safe_mem_primitives_lib.h  safe_memcmp16.c  safe_memcpy16.c  safe_memcpy32.c  safe_memmove.c  safe_memset16.c  safe_memset32.c  safe_memzero16.c  safe_memzero32.c  safe_stpncpy.c  safe_str_constraint.h  safe_strcasestr.c  safe_strcat.c  safe_strcmp.c  safe_strcpy.c  safe_strcpyfld.c  safe_strfirstsame.c  safe_strlastdiff.c  safe_strncat.c  safe_strncpy.c  safe_strspn.c  safe_wcsnlen.c  safe_wmemset.c  sstring_lib.vcxproj  sstring_lib.vcxproj.filters
socket_server/: Makefile  launch_socket_server.sh
socket_server/include/: socket_server.h
socket_server/sm_log_lib-0.0.2.2/: Makefile
socket_server/sm_log_lib-0.0.2.2/include/: pch.h  sm_files_tools.h  sm_log.h
socket_server/sm_log_lib-0.0.2.2/src/: sm_files_tools.c  sm_log.c
socket_server/src/: socket_server.cpp
socket_server/sstring_lib-0.0.1.1/: Makefile
socket_server/sstring_lib-0.0.1.1/include/: safe_clib_private.h  safe_str_lib.h
socket_server/sstring_lib-0.0.1.1/src/: safe_abort_handler.c  safe_gets.c  safe_mem_constraint.c  safe_mem_primitives_lib.c  safe_memcmp.c  safe_memmove16.c  safe_snprintf_support.c  safe_strcasecmp.c  safe_strcmpfld.c  safe_strcpyfldout.c  safe_strfirstchar.c  safe_strfirstdiff.c  safe_strisdigit.c  (+10 more)
vpn_stack/: settings.gradle
vpn_stack/app/: build.gradle
vpn_stack/app/src/main/jni/: CMakeLists.txt  log_service.c  vpn_stack.c
vpn_stack/app/src/main/jni/sm_log_lib-0.0.2.2/src/: sm_log.c
vpn_stack/app/src/main/jni/sstring_lib-0.0.1.1/include/: safe_fopen.h  safe_lib.h  safe_mem_lib.h  safe_snprintf.h  safe_types.h
vpn_stack/app/src/main/jni/sstring_lib-0.0.1.1/src/: safe_fopen.c  safe_ignore_handler.c  safe_memcmp32.c  safe_memcpy.c  safe_memmove32.c  safe_memset.c  safe_memzero.c  safe_stpcpy.c  safe_str_constraint.c  safe_strcpyfldin.c  safe_strcspn.c  safe_strisalphanumeric.c  safe_strisascii.c  safe_strishex.c  safe_strislowercase.c  safe_strismixedcase.c  safe_strisuppercase.c  safe_strlastsame.c  safe_strljustify.c  safe_strprefix.c  safe_strstr.c  safe_strtolowercase.c  safe_strtouppercase.c  safe_strzero.c  safe_wcscat.c  safe_wcsncat.c  safe_wcsncpy.c  safe_wmemcmp.c  safe_wmemcpy.c
vpn_stack/app/src/main/jni/vpn/: dhcp.c  dns.c  icmp.c  ip.c  session.c  tcp.c  udp.c  util.c  vpn.c  vpn.h
(+24 files in other folders)
